[package]
name = "a-maze"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.8.1"
bevy_ggrs = "0.10.0"
bytemuck = "1.12.1"
ggrs = "0.9.2"
matchbox_socket = {version = "0.3.0", features = ["ggrs-socket"]}
