[package]
name = "a-maze"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.8.1"
bevy_ggrs = "0.10.0"
bytemuck = "1.12.1"
ggrs = "0.9.2"
matchbox_socket = { git = "https://github.com/johanhelsing/matchbox.git", rev = "932fbd600f795e8654720ed2f5f556eef11389c9", features = [
    "ggrs-socket",
] }
